[gd_scene load_steps=2 format=3 uid="uid://chxfpq80idji4"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_c4fvb"]

[node name="MainMenu" type="AspectRatioContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c4fvb")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Free Hugs"
horizontal_alignment = 1

[node name="Warehouse1Button" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Go to Warehouse 1"

[node name="Warehouse2Button" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Go to Warehouse 2"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Warehouse1Button" to="." method="_on_warehouse_1_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Warehouse2Button" to="." method="_on_warehouse_2_button_pressed"]
